@@ -55,15 +55,32 @@ project file.
 ``PyObjCTools.AppHelper``
 .........................
 
-This module exports two functions that are useful when working with the
-``AppKit`` framework.
+This module exports functions that are useful when working with the
+``AppKit`` framework (or more generally, run loops).
+
+* ``callAfter(func, *args, **kwargs) -> None``
+
+  Call a function on the main thread.  Returns immediately.
+
+* ``callLater(delay, func, *args, **kwargs) -> None``
+
+  Call a function on the main thread after a delay.  Returns immediately.
 
 * ``endSheetMethod(method) -> selector``
 
   Convert a method to a form that is suitable to use as the delegate callback
   for sheet methods.
 
-* ``runEventLoop(argv=None, unexpectedErrorAlert=unexpectedErrorAlert) -> None``
+* ``stopEventLoop() -> None``
+
+  Stops the event loop (if started by ``runConsoleEventLoop``) or sends the
+  ``NSApplication`` a ``terminate:`` message.
+
+* ``runConsoleEventLoop(argv=None, installInterrupt=False, mode=NSDefaultRunLoopMode) -> None``
+
+  Run a ``NSRunLoop`` in a stoppable way (with ``stopEventLoop``).
+
+* ``runEventLoop(argv=None, unexpectedErrorAlert=unexpectedErrorAlert, installInterrupt=None, pdb=None, main=NSApplicationMain) -> None``
 
   Run the event loop using ``NSApplicationMain`` and ask the user if we should
   continue if an exception is caught.
