@@ -7,6 +7,10 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.1 (2005-04-??)
 --------------------------
 
+- New PyObjCTools.AppHelper functions: callAfter and callLater,
+  conveniences for calling Python functions on the main thread
+  as soon as possible, or after a delay.
+
 - Twisted examples changed to use threadedselectreactor instead
   of cfreactor.  cfreactor is deprecated.  Needs Twisted newer
   than 2.0 (currently svn r13575 or later).
